<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Activity Strings -->
    <string name="app_name">ClassApp</string>
    <string name="welcome_msg">Home - List of Classes</string>
    <string name="class_id_hint">Enter Class Id</string>
    <string name="class_name_hint">Enter Class Name</string>
    <string name="create_button">Create</string>
    
    <!-- Student Activity Strings -->
    <string name="student_id_hint">Enter Student Id</string>
    <string name="score_hint">Score (0&#8211;100)</string>
    <string name="show_stats_button">Show Quiz Stats</string>
    
    <!-- App Level Strings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>